# advent-of-code-2022

./: .gitignore  README.md  adventOfCode.sln  new.sh
01/: 01.fsproj  Program.fs
02/: 02.fsproj  Program.fs
03/: 03.fsproj  Program.fs
04/: 04.fsproj  Program.fs
05/: 05.fsproj  Program.fs
06/: 06.fsproj  Program.fs
07/: 07.fsproj  Program.fs
c++/: CMakeLists.txt  aoc2022.cpp  days.h
c++/days/: 01.cpp  01.h  02.cpp  02.h  03.cpp  03.h  05.cpp  05.h
lib/: Extensions.fs  InputUtils.fs  Matrix.fs  lib.fsproj
